  * Fixed bug where love.audio.pause and friends were acting on everything, not just the passed Source.
  * Fixed setFixedRotation enabling other flags.
  * Fixed a bug in the loader (for require).
  * Fixed a bug where ParticleSystem::setSprite did not retain the new image.
  * Fixed a bug where images would lose their settings (wrapping, filters) when setMode as called.
  * Invalid FSAA values now fall back to working ones (or none at all).
  * Cleaned up traceback in error screen.
  * Moved fonts to love.font (from love.graphics), only rendering remains in love.graphics.
  * Switched font origin to top-left.
  * OS X now properly uses UTIs for .love files.
  * Fewer compiler warnings.

LOVE 0.6.2
----------

  * Fixed a bug causing ImageFonts to cut off some pixels.
  * Fixed a bug where filled rectangles were too small.
  * Fixed a bug in Image:setFilter where it would switch the parameters.
  * Fixed a bug in ImageRasterizer where it wasn't using the data.
  * Image filter and wrap modes now use string constants as well.
  * Fixed double-transform bug in SpriteBatch.
  * Errors are reported on stdout again.
  * Another fix for the icons on ubuntu.

LOVE 0.6.1
----------

  * Added Shape:setGroupIndex and getGroupIndex.
  * Added Body:setFixedRotation and Body:getFixedRotation.
  * Added Body:setInertia.
  * Added CircleShape:getLocalCenter and CircleShape:getWorldCenter.
  * Added icons and file associations for the debs.
  * Added the demos folder to the Mac OS X DMG.
  * It's now possible to run a .love from Resources in Mac OS X, thanks to Steve Johnson.
  * Fixed a bug with multiple Sources on the same Music.
  * Fixed a bug so the mouse doesn't get crippled when the keyboard is disabled.
  * Fixed a bug where love.graphics.rectangle drew a too large rectangle.
  * Fixed a bug where memory wouldn't be released correctly.
  * Fixed epic physics typo (getRestituion->getRestitution).
  * Fixed crash on opening non-existent image.